fix: fix formatting issues
added sufficient space between paragraphs as it was hard to see where one ended and the next one
started.
also fixed some issues with bold and italic sentences/words not being formatted properly.

fix #1

--- a/views/sass/_components.scss
+++ b/views/sass/_components.scss
@@ -304,7 +304,7 @@
     // lobotomised owl selector. equivalent to '> *:not(:first-of-type)' but has no/lowest specificity, and hence better for cascading. who says css isn't a programming language :p
     > * + * {
       // every direct child except first will have padding-top
-      padding-top: 0.3em;
+      padding-top: 1em;
     }
 
     // some math eqations will overflow.
@@ -358,7 +358,7 @@
     white-space: pre-wrap;
   }
   &__span-bold {
-    font-weight: 500;
+    font-weight: 550;
   }
   &__span-link {
     @include format-link(
